# tradeo

./: .dockerignore  .env.example  .gitignore  CLAW_IMPLEMENTATION_PROMPT.md  CLAW_RESEARCH_LAB_INTEGRATION_PROMPT.md  MEMORY.md  Makefile  README.md  TRADEO_INTRADAY_SMALLCAP_EXPANSION.md  docker-compose.audit.yml  docker-compose.ibkr-local.override.example.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_schema.py  0002_intraday_session_tables.py  0003_intraday_distributed_work_queue.py  0004_research_window_history.py  0005_research_registry_state.py
backend/tradeo/: main.py  schemas.py
backend/tradeo/agents/: audit_agent.py  base.py  data_collector.py  improvement_agent.py  pattern_discovery_lab_agent.py  pattern_hunter.py  risk_agent.py  supervisor_agent.py  technical_context.py
backend/tradeo/core/: config.py  security.py
backend/tradeo/db/: init_db.py  json_contracts.py  models.py  session.py
backend/tradeo/modules/: __init__.py
backend/tradeo/ops/: __init__.py  false_match_metrics.py  research_state_migration.py  research_window_history.py
backend/tradeo/research/: __init__.py  active_learning.py  adversarial_research.py  autonomous_research_director.py  causal_invariance.py  cluster_research_engine.py  conformal_matching.py  determinism.py  false_match_harness.py  foundation_teacher.py  global_experiment_registry.py  hypothesis_engine.py  intraday_context_filters.py  intraday_research_evidence.py  intraday_research_forensics.py  intraday_research_planner.py  (+22 more)
(+1436 files in other folders)
